# shopitt

./: ANIMATION_SNIPPETS.md  BACKEND_SETUP_SUMMARY.md  BACKEND_STATUS.md  COMPLETION_CHECKLIST.md  FILE_MANIFEST.md  FINAL_VERIFICATION.md  FLOATING_BAG_INTEGRATION.md  FLOATING_BAG_QUICKSTART.md  FLOATING_BAG_README.md  FLOATING_BAG_STATUS.md  FLOATING_BAG_VISUAL_GUIDE.md  FRONTEND_ENHANCEMENTS.md  INTEGRATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  RESPONSIVE_LAYOUT_COMPLETE.md  RESPONSIVE_NAVIGATION_GUIDE.md  RESPONSIVE_NAV_IMPLEMENTATION.md  RESPONSIVE_VISUAL_GUIDE.md  SESSION_SUMMARY.md  check-floating-bag.sh  index.html  tailwind.config.ts
backend/: STRUCTURE.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/apps/bag/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/bag/migrations/: 0001_initial.py  __init__.py
backend/apps/creators/: models.py  serializers.py  urls.py  views.py
backend/apps/drops/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/events/: models.py  serializers.py  urls.py  views.py
backend/apps/products/: models.py  serializers.py  urls.py  views.py
backend/apps/tastegraph/: apps.py  models.py  serializers.py  urls.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/core/: apps.py  consumers.py  urls.py  views.py
backend/shopitt/: asgi.py  settings.py  urls.py  wsgi.py
backend/shopitt_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/shopitt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package.json  (+4 more)
(+87 files in other folders)
