[project]
name = "shopitt-backend"
version = "0.1.0"
description = "ShopItt backend"
requires-python = ">=3.11"
dependencies = [
	"Django==5.0.7",
	"djangorestframework==3.15.2",
	"channels==4.1.0",
	"channels-redis==4.2.0",
	"daphne==4.1.2",
	"psycopg[binary]==3.2.3",
	"python-dotenv==1.0.1",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 